Fixed FAQ section mobile responsive bug

--- a/styles/faq.css
+++ b/styles/faq.css
@@ -8,6 +8,8 @@
     align-items: flex-start;
     justify-content: center;
 
+    overflow-x: hidden;
+
     @media only screen and (min-width: 800px) {
         padding-left: 14vw;
         padding-right: 14vw;
