--- a/styles/teamcard.css
+++ b/styles/teamcard.css
@@ -100,6 +100,12 @@
     }
 }
 
+@media only screen and (min-width: 350px) {
+    .cardStyle {
+        max-width: 300px;
+    }
+}
+
 @media only screen and (min-width: 426px) {
     .cardStyle {
         max-width: 400px;
